# markdown-to-standalone-html

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  heading.rs  highlight_code.rs  inline_assets.rs  main.rs  md2html.rs  template.html
