[package]
name = "markdown-to-standalone-html"
description = "Create a standalone HTML file from Markdown with basic CSS, table of contents and source code highlighting."
version = "0.5.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/markdown-to-standalone-html"
authors = ["EdJoPaTo <markdown-to-standalone-html@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = "2"

[dependencies]
anyhow = "1"
handlebars = "4"
regex = "1"
serde_json = "1"
syntect = "4"

[dependencies.clap]
version = "2"
features = ["wrap_help"]

[dependencies.pulldown-cmark]
version = "0.8"
default-features = false
