[package]
name = "markdown-to-standalone-html"
description = "Create a standalone HTML file from Markdown with basic CSS, table of contents and source code highlighting."
version = "0.5.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/markdown-to-standalone-html"
authors = ["EdJoPaTo <markdown-to-standalone-html@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
handlebars = "6"
lazy-regex = "3"
pulldown-cmark = { version = "0.11", default-features = false, features = ["html"] }
serde_json = "1"
syntect = "5"
